--- a/app/styles/filters.scss
+++ b/app/styles/filters.scss
@@ -4,6 +4,14 @@
 .school{
   visibility: hidden;
 }
+
+ul#schoolsList, ul#affilsList {
+	p {
+		margin-left: 10px;
+		margin-top: 4px;
+	}
+	}
+	
 // slider background shape
 .school__label {
   background-color: rgba(26, 26, 26, 0);
@@ -12,6 +20,7 @@
   display: inline-block;
   position: relative;
   margin-right: 10px;
+  margin-bottom: 4px;
   width: 58px;
   height: 30px;
 }
