--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -75,3 +75,10 @@
   padding:10px 5px;
   padding-bottom:0px !important;
 }
+
+ul#schoolsList, ul#affilsList {
+	p {
+		margin-left: 10px;
+		margin-top: 2px;
+	}
+	}
